# dist/swagger.json
@@ -5,9 +5,11 @@
     "description": "Event Planner project",
     "version": "1.0.0"
   },
-  "host": "event-planner-hb82.onrender.com",
+  "host": "https://event-planner-hb82.onrender.com/",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/": {
       "get": {
@@ -67,14 +69,38 @@
             "description": "Created"
           }
         }
-      }
-    },
-    "/api-docs/api-docs": {
-      "get": {
+      },
+      "put": {
         "description": "",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
